# coverage-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  SECURITY.md  pytest.ini  requirements.dev.txt  ruff.toml  setup.cfg
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  3_question.yaml
.github/workflows/: scorecard.yml
coverage_pre_commit/: coverage_runner.py
coverage_pre_commit/common/enums/: __better_enum.py  __init__.py  better_enum.py  provider_commands.py  providers.py
coverage_pre_commit/common/types/: __init__.py  provider.py
coverage_pre_commit/util/: __init__.py  command.py  dependency_checker.py  execute_command.py  metadata.py  namespace.py
tests/: conftest.py  test_better_enum.py  test_command_utils.py  test_coverage_runner.py  test_dependency_checker.py  test_integration.py  test_metadata.py  test_providers.py
