[metadata]
name = coverage_pre_commit
version = 0.1.0
description = A pre-commit hook to run coverage on your code and enforce a minimum coverage threshold.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gtkacz/coverage-pre-commit
author = Gabriel Mitelman Tkacz
author_email = gmtkacz@proton.me
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    coverage>=7.6.12,<7.8.0
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    coverage_pre_commit = coverage_pre_commit.coverage_runner:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
